20130701
- Update manga parser.
- Add new option to back up old file if the filesize is different (backupOldFile).

20130511
- Refactor out PixivException and PixivBrowserFactory.
- Update error codes.
- Update artist token parser to handle all img-inf in image list.
- Update filename sanitizer to remove all Unicode Control Character (Cc).

20130430
- Update parser.
- Add start/end page for Download from Bookmarked Members (option 5).
- Remove member id from option 6, use option 11, Download bookmarked images by member_id.
- Add url logging for failed login using cookie.

20130330
- Add Ctrl+C handler for download by member id and download by tags to
  allow user to skip to next image or abort the whole process.

20130327
- Add option to keep signed in, set keepsignedin = 1 in config.ini on 
  [Authentication] section.
- Add login error message parser.

20130322
- Add download time and speed.
- Backup config.ini when saving to config.ini.bak.

20130321
- Fix command line option for download by member id and tags to allow single
  tag search.

20130316
- Add option to skip image if worksDate < dateDiff, this will skip to next 
  member, or stop processing for download from new bookmark.

20130308
- Add menu to reload config.ini
- Add %date% for filename format (YYYYMMMDD).

20130222
- Update parser to the latest pixiv layout.
- Update last page detection (20130222b).
- Update sanitizeFilename: remove new line marker '\r\n' (20130222c).

20130201
- Update imageDownload to skip if got 502 error.
- Fix end page detection for download by tags.

20130128
- Fix end page limit.
- Update parser for pixivArtist and download by tags.

20121215
- Fix title, tags, and caption parsing.
- Add new filename format for download by tags:
  -%searchTags%  ==> for download by tags, add searched tag keyword.

20121208
- Update no image detection for member
- Fix issue #14: ignore showcase for download by tag 
- Fix issue #15: Update query for search by tag